bpo-45089: sqlite3 trace callbacks no longer clears exceptions